--- a/hw3/CUDA1/Makefile
+++ b/hw3/CUDA1/Makefile
@@ -7,14 +7,14 @@
 ### Last Modified: Nov 2014 WB, WR, LR
 ###
 
-SDK_INSTALL_PATH :=  /cm/shared/apps/cuda11.2/toolkit/11.2.2
+SDK_INSTALL_PATH :=  /usr/local/cuda
 NVCC=$(SDK_INSTALL_PATH)/bin/nvcc
 LIB       :=  -L$(SDK_INSTALL_PATH)/lib64 -L$(SDK_INSTALL_PATH)/samples/common/lib/linux/x86_64
 #INCLUDES  :=  -I$(SDK_INSTALL_PATH)/include -I$(SDK_INSTALL_PATH)/samples/common/inc
 OPTIONS   :=  -O3 
 #--maxrregcount=100 --ptxas-options -v 
 
-TAR_FILE_NAME  := YourNameCUDA1.tar
+TAR_FILE_NAME  := yw3809CUDA1.tar
 EXECS :=  vecadd00 matmult00
 all:$(EXECS)
 
