--- a/hw3/CUDA1/Makefile
+++ b/hw3/CUDA1/Makefile
@@ -9,7 +9,7 @@
 
 SDK_INSTALL_PATH :=  /usr/local/cuda
 NVCC=$(SDK_INSTALL_PATH)/bin/nvcc
-LIB       :=  -L$(SDK_INSTALL_PATH)/lib64 -L$(SDK_INSTALL_PATH)/samples/common/lib/linux/x86_64
+LIB       :=  -L$(SDK_INSTALL_PATH)/lib64 #-L$(SDK_INSTALL_PATH)/samples/common/lib/linux/x86_64
 #INCLUDES  :=  -I$(SDK_INSTALL_PATH)/include -I$(SDK_INSTALL_PATH)/samples/common/inc
 OPTIONS   :=  -O3 -fPIC
 #--maxrregcount=100 --ptxas-options -v 
