--- a/hw3/CUDA1/Makefile
+++ b/hw3/CUDA1/Makefile
@@ -11,7 +11,7 @@ SDK_INSTALL_PATH :=  /usr/local/cuda
 NVCC=$(SDK_INSTALL_PATH)/bin/nvcc
 LIB       :=  -L$(SDK_INSTALL_PATH)/lib64 -L$(SDK_INSTALL_PATH)/samples/common/lib/linux/x86_64
 #INCLUDES  :=  -I$(SDK_INSTALL_PATH)/include -I$(SDK_INSTALL_PATH)/samples/common/inc
-OPTIONS   :=  -O3 -shared -Xcompiler -fPIC
+OPTIONS   :=  -O3 -shared -Xcompiler -fPIC -no-pie
 #--maxrregcount=100 --ptxas-options -v 
 
 TAR_FILE_NAME  := yw3809CUDA1.tar
