--- a/hw3/CUDA1/Makefile
+++ b/hw3/CUDA1/Makefile
@@ -28,11 +28,11 @@ tar:
 #######################################################################
 
 timer.o : timer.cu timer.h
-	${NVCC} $< -c -o $@ $(OPTIONS)
+	${NVCC} $< -c  -Xcompiler -fPIE -o $@ $(OPTIONS)
 
 #######################################################################
 vecaddKernel00.o : vecaddKernel00.cu
-	${NVCC} $< -c -o $@ $(OPTIONS)
+	${NVCC} $< -c -Xcompiler -fPIE -o $@ $(OPTIONS)
 
 vecadd00 : vecadd.cu vecaddKernel.h vecaddKernel00.o timer.o
 	${NVCC} $< vecaddKernel00.o -o $@ $(LIB) timer.o $(OPTIONS)
