--- a/hw3/CUDA1/Makefile
+++ b/hw3/CUDA1/Makefile
@@ -1,8 +1,8 @@
 SDK_INSTALL_PATH :=  /usr/local/cuda
 NVCC=$(SDK_INSTALL_PATH)/bin/nvcc
 LIB       :=  -L$(SDK_INSTALL_PATH)/lib64 -L$(SDK_INSTALL_PATH)/samples/common/lib/linux/x86_64
-OPTIONS   :=  -O3 -Xcompiler -fPIE  # Use -fPIE for object files
-LINK_OPTIONS := -Xlinker -pie       # Use -pie for the final linking
+OPTIONS   :=  -O3 -Xcompiler -fPIC       # Compile object files with -fPIC
+LINK_OPTIONS := -Xcompiler -fPIE -Xlinker -pie  # Use -fPIE and -pie during linking
 
 TAR_FILE_NAME  := yw3809CUDA1.tar
 EXECS :=  vecadd00 matmult00
@@ -25,11 +25,11 @@ vecaddKernel00.o : vecaddKernel00.cu
 	${NVCC} $< -c -o $@ $(OPTIONS)
 
 vecadd00 : vecadd.cu vecaddKernel.h vecaddKernel00.o timer.o
-	${NVCC} $< vecaddKernel00.o -o $@ $(LIB) timer.o $(OPTIONS) $(LINK_OPTIONS)
+	${NVCC} $< vecaddKernel00.o -o $@ $(LIB) timer.o $(LINK_OPTIONS)
 
 #######################################################################
 matmultKernel00.o : matmultKernel00.cu matmultKernel.h 
 	${NVCC} $< -c -o $@ $(OPTIONS)
 
 matmult00 : matmult.cu  matmultKernel.h matmultKernel00.o timer.o
-	${NVCC} $< matmultKernel00.o -o $@ $(LIB) timer.o $(OPTIONS) $(LINK_OPTIONS)
+	${NVCC} $< matmultKernel00.o -o $@ $(LIB) timer.o $(LINK_OPTIONS)
